# extensions-repo

./: .gitignore  README.md
any-downloader/: README.md  bridge.ps1  changelog.md  details.md  disable.ps1  enable.ps1  launch.ps1  manifest.json  run.ps1  window.ps1
any-downloader/app/: README.md
any-downloader/info/: changelog.md  details.md
any-downloader/src/: index.html  vite.config.ts
any-downloader/ui/: index.html
downloader/: README.md  bridge.ps1  changelog.md  details.md  disable.ps1  enable.ps1  manifest.json  window.ps1
downloader/app/: package.json  vite.config.ts
downloader/app/src-tauri/: Cargo.toml  tauri.conf.json
downloader/app/src-tauri/capabilities/: main.json
downloader/app/src-tauri/src/: main.rs
downloader/src/: package.json
downloader/src/src-tauri/: Cargo.toml  tauri.conf.json
downloader/src/src-tauri/capabilities/: main.json
lock-folder/: changelog.md  debug.ps1  details.md  disable.ps1  enable.ps1  launcher.ps1  lock.ps1  manifest.json  run.ps1  silent.vbs  toggle.ps1  unlock.ps1
lock-folder/app/: launcher.ps1  toggle.ps1
lock-folder/info/: changelog.md  details.md
multikey-shortcuts/: changelog.md  details.md  manifest.json  run.ps1  shortcuts.ahk  shortcuts.json
multikey-shortcuts/app/: shortcuts.ahk  shortcuts.json
multikey-shortcuts/info/: changelog.md  details.md  test.md
native-test/: manifest.json  run.ps1
native-test/app/: PLACE_EXE_HERE.md
native-test/info/: changelog.md  (+1 more)
open-calculator/: changelog.md  details.md  manifest.json  run.ps1
ui-test/: details.md  manifest.json  noop.ps1  run.ps1
(+10 files in other folders)
