[package]
name = "any-downloader"
version = "1.0.0"
description = "Any Downloader — Danhawk extension"
authors = ["Dan"]
edition = "2021"

[[bin]]
name = "any-downloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
